# Property_Finder

./: README.md  RENDER_DEPLOYMENT.md  TODO.md  render.yaml
backend/: .gitignore  assistant.py  assistant_schemas.py  auth.py  chat.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py  storage.py
backend/data/: gurgaon_10k-selected-columns.csv
frontend/: README.md  index.html  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentsModal.jsx  AssistantPanel.jsx  AuthModal.jsx  ChatPanel.jsx  FilterBar.jsx  MyPropertiesModal.jsx  Navbar.jsx  PropertyCard.jsx  PropertyFormModal.jsx  PropertyModal.jsx
frontend/src/context/: AuthContext.jsx
