[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.100.0",
    "jose>=1.0.0",
    "openai>=2.44.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.22.0",
]
